refactor(tests): replace `Files.write` with `Files.writeString` in `HardLinkManagerTest`
- Simplify test file writing by using `Files.writeString` for improved readability.