@@ -7,7 +7,6 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -38,7 +37,7 @@ class HardLinkManagerTest {
         Path targetFile = targetDir.resolve("target.txt");
         String testContent = "Test content";
 
-        Files.write(sourceFile, testContent.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(sourceFile, testContent);
 
         // Act
         hardLinkManager.createHardLink(sourceFile, targetFile);
@@ -56,7 +55,7 @@ class HardLinkManagerTest {
         Path targetFile = tempDir.resolve("target.txt");
         String testContent = "Test content";
 
-        Files.write(sourceFile, testContent.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(sourceFile, testContent);
         hardLinkManager.createHardLink(sourceFile, targetFile);
 
         // Act - Delete the source file
@@ -76,11 +75,11 @@ class HardLinkManagerTest {
         String initialContent = "Initial content";
         String modifiedContent = "Modified content";
 
-        Files.write(sourceFile, initialContent.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(sourceFile, initialContent);
         hardLinkManager.createHardLink(sourceFile, targetFile);
 
         // Act - Modify content through the source file
-        Files.write(sourceFile, modifiedContent.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(sourceFile, modifiedContent);
 
         // Assert - Both files should reflect the change (they're hard linked)
         assertEquals(modifiedContent, Files.readString(sourceFile));
@@ -95,8 +94,8 @@ class HardLinkManagerTest {
         String sourceContent = "Source content";
         String oldTargetContent = "Old target content";
 
-        Files.write(sourceFile, sourceContent.getBytes(StandardCharsets.UTF_8));
-        Files.write(targetFile, oldTargetContent.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(sourceFile, sourceContent);
+        Files.writeString(targetFile, oldTargetContent);
 
         // Act
         hardLinkManager.createHardLink(sourceFile, targetFile);
@@ -140,7 +139,7 @@ class HardLinkManagerTest {
         Path targetFile = tempDir.resolve("target.txt");
         String testContent = "Test content for hard link";
 
-        Files.write(sourceFile, testContent.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(sourceFile, testContent);
 
         // Act
         hardLinkManager.createHardLink(sourceFile, targetFile);
@@ -162,7 +161,7 @@ class HardLinkManagerTest {
         Path targetFile = tempDir.resolve("target-with-dashes_and_underscores.txt");
         String testContent = "Content with special filename";
 
-        Files.write(sourceFile, testContent.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(sourceFile, testContent);
 
         // Act
         hardLinkManager.createHardLink(sourceFile, targetFile);
@@ -188,7 +187,7 @@ class HardLinkManagerTest {
         Path targetFile = tempDir.resolve("target.txt");
         String testContent = "Test content";
 
-        Files.write(sourceFile, testContent.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(sourceFile, testContent);
         hardLinkManager.createHardLink(sourceFile, targetFile);
 
         // Verify hard link exists
@@ -209,8 +208,8 @@ class HardLinkManagerTest {
         Path file1 = tempDir.resolve("file1.txt");
         Path file2 = tempDir.resolve("file2.txt");
 
-        Files.write(file1, "content1".getBytes(StandardCharsets.UTF_8));
-        Files.write(file2, "content2".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(file1, "content1");
+        Files.writeString(file2, "content2");
 
         // Act
         boolean result = hardLinkManager.isOnSameFilesystem(file1, file2);
@@ -228,8 +227,8 @@ class HardLinkManagerTest {
         Path file1 = tempDir.resolve("file1.txt");
         Path file2 = subDir.resolve("file2.txt");
 
-        Files.write(file1, "content1".getBytes(StandardCharsets.UTF_8));
-        Files.write(file2, "content2".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(file1, "content1");
+        Files.writeString(file2, "content2");
 
         // Act
         boolean result = hardLinkManager.isOnSameFilesystem(file1, file2);
@@ -247,7 +246,7 @@ class HardLinkManagerTest {
     @Test
     void testGetHardLinkCount_FallbackIsAtLeastOne() throws IOException {
         Path sourceFile = tempDir.resolve("source.txt");
-        Files.write(sourceFile, "x".getBytes(java.nio.charset.StandardCharsets.UTF_8));
+        Files.writeString(sourceFile, "x");
         int count = hardLinkManager.getHardLinkCount(sourceFile);
         assertTrue(count >= 1);
     }
@@ -256,7 +255,7 @@ class HardLinkManagerTest {
     void testGetHardLinkCount_IncrementsAfterCreatingLink() throws IOException {
         Path sourceFile = tempDir.resolve("source.txt");
         Path targetFile = tempDir.resolve("target.txt");
-        Files.write(sourceFile, "x".getBytes(java.nio.charset.StandardCharsets.UTF_8));
+        Files.writeString(sourceFile, "x");
         int before = hardLinkManager.getHardLinkCount(sourceFile);
         hardLinkManager.createHardLink(sourceFile, targetFile);
         int after = hardLinkManager.getHardLinkCount(sourceFile);
